Fixing some of the spacing and adding the border style to the container borders so they actually show up

--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    border-top: 3px #395c6b;
-    border-bottom: 3px #395c6b;
+    border-top: 2px solid #395c6b;
+    border-bottom: 2px solid #395c6b;
 }
 
 #headshot{
@@ -28,6 +28,7 @@
 #intro{
     display: flex;
     text-align: left;
+    padding: 20px;
 }
 header,footer{
     background-color: #fdbe7b;
